--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     tools:context=".MainActivity">
 
+<!--    Layout for top buttons-->
+
+
+<!--        New Game Button-->
+
+
+<!--        Finish Turn Button-->
+
+
+<!--    Dealer Label-->
+
+
+<!--    Layout for the Dealer's card images-->
+
+
+<!--    Label used to send messages to the user-->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Hit or Stop?"
+        android:id="@+id/user_msg"
+        android:gravity="center"
+        />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+<!--    Layout for the user's card images-->
+
+
+<!--    Layout for Hit and Stop buttons-->
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/user_msg"
+        android:rowCount="1"
+        android:columnCount="2"
+        android:padding="20dp"
+        />
+
+    <!--    Hit Button-->
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/user_msg"
+            android:text="Hit"
+            />
+
+    <!--    Stop Button-->
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/user_msg"
+            android:text="Stop"
+            />
+
+</RelativeLayout>
