--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,19 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="CardLayout">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:rowCount">1</item>
+        <item name="android:columnCount">5</item>
+    </style>
+
+    <style name="ButtonLayout">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:rowCount">1</item>
+        <item name="android:columnCount">2</item>
+        <item name="android:padding">30dp</item>
+    </style>
+
 </resources>
