hit and initial deal

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,22 +34,56 @@
     </GridLayout>
 
     <!--    Layout for the Dealer's card images-->
-    <GridLayout
-        style="@style/CardLayout"
-        android:layout_below="@+id/newGameLayout"
-        android:id="@+id/dealerCards"
-        >
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:layout_gravity="left|top"
-            android:src="@drawable/ten_of_hearts"
-            android:contentDescription="@string/tenDiamondsDesc"
-            />
-    </GridLayout>
 
     <!--    Label used to send messages to the user-->
+    <GridLayout
+        android:id="@+id/dealerCards"
+        style="@style/CardLayout"
+        android:layout_below="@+id/newGameLayout"
+        android:layout_marginTop="-3dp">
+
+        <ImageView
+            android:id="@+id/imageView20"
+            android:layout_width="61dp"
+            android:layout_height="100dp"
+            android:layout_row="0"
+            android:layout_column="1"
+            app:srcCompat="@android:drawable/btn_star" />
+
+        <ImageView
+            android:id="@+id/imageView31"
+            android:layout_width="61dp"
+            android:layout_height="100dp"
+            android:layout_row="0"
+            android:layout_column="0"
+            app:srcCompat="@android:drawable/btn_star" />
+
+        <ImageView
+            android:id="@+id/imageView21"
+            android:layout_width="61dp"
+            android:layout_height="100dp"
+            android:layout_row="0"
+            android:layout_column="2"
+            app:srcCompat="@android:drawable/btn_star" />
+
+        <ImageView
+            android:id="@+id/imageView22"
+            android:layout_width="61dp"
+            android:layout_height="100dp"
+            android:layout_row="0"
+            android:layout_column="3"
+            app:srcCompat="@android:drawable/btn_star" />
+
+        <ImageView
+            android:id="@+id/imageView25"
+            android:layout_width="61dp"
+            android:layout_height="100dp"
+            android:layout_row="0"
+            android:layout_column="4"
+            app:srcCompat="@android:drawable/btn_star" />
+
+    </GridLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -85,6 +119,7 @@
             android:layout_gravity="right|top"
             android:text="Stop"
             />
+
     </GridLayout>
 
 <!--    User Cards Label -->
@@ -106,12 +141,40 @@
         >
 
         <ImageView
-            android:layout_width="match_parent"
+            android:id="@+id/user0"
+            android:layout_width="61dp"
             android:layout_height="100dp"
-            android:layout_gravity="left|top"
-            android:src="@drawable/ten_of_hearts"
-            android:contentDescription="@string/tenDiamondsDesc"
-            />
+            android:layout_row="0"
+            android:layout_column="0" />
+
+        <ImageView
+            android:id="@+id/user4"
+            android:layout_width="61dp"
+            android:layout_height="100dp"
+            android:layout_row="0"
+            android:layout_column="4" />
+
+        <ImageView
+            android:id="@+id/user2"
+            android:layout_width="61dp"
+            android:layout_height="100dp"
+            android:layout_row="0"
+            android:layout_column="2" />
+
+        <ImageView
+            android:id="@+id/user3"
+            android:layout_width="61dp"
+            android:layout_height="100dp"
+            android:layout_row="0"
+            android:layout_column="3" />
+
+        <ImageView
+            android:id="@+id/user1"
+            android:layout_width="61dp"
+            android:layout_height="100dp"
+            android:layout_row="0"
+            android:layout_column="1" />
+
     </GridLayout>
 
 </RelativeLayout>
