--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
 <!--    Layout for top buttons-->
+
     <GridLayout
         style="@style/ButtonLayout"
         android:id="@+id/newGameLayout"
@@ -43,44 +44,39 @@
         android:layout_marginTop="-3dp">
 
         <ImageView
-            android:id="@+id/imageView20"
+            android:id="@+id/dealer1"
             android:layout_width="61dp"
             android:layout_height="100dp"
             android:layout_row="0"
-            android:layout_column="1"
-            app:srcCompat="@android:drawable/btn_star" />
+            android:layout_column="1" />
 
         <ImageView
-            android:id="@+id/imageView31"
+            android:id="@+id/dealer0"
             android:layout_width="61dp"
             android:layout_height="100dp"
             android:layout_row="0"
-            android:layout_column="0"
-            app:srcCompat="@android:drawable/btn_star" />
+            android:layout_column="0" />
 
         <ImageView
-            android:id="@+id/imageView21"
+            android:id="@+id/dealer2"
             android:layout_width="61dp"
             android:layout_height="100dp"
             android:layout_row="0"
-            android:layout_column="2"
-            app:srcCompat="@android:drawable/btn_star" />
+            android:layout_column="2" />
 
         <ImageView
-            android:id="@+id/imageView22"
+            android:id="@+id/dealer3"
             android:layout_width="61dp"
             android:layout_height="100dp"
             android:layout_row="0"
-            android:layout_column="3"
-            app:srcCompat="@android:drawable/btn_star" />
+            android:layout_column="3" />
 
         <ImageView
-            android:id="@+id/imageView25"
+            android:id="@+id/dealer4"
             android:layout_width="61dp"
             android:layout_height="100dp"
             android:layout_row="0"
-            android:layout_column="4"
-            app:srcCompat="@android:drawable/btn_star" />
+            android:layout_column="4" />
 
     </GridLayout>
 
@@ -176,5 +172,11 @@
             android:layout_column="1" />
 
     </GridLayout>
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
 
 </RelativeLayout>
