--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:layout_marginRight="20dp"
         android:layout_alignParentRight="true"
         android:text="Dealer's Cards"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/white"
         android:textSize="20dp" />
 
     <!--    Dealer Score Label-->
